<resources>
    <string name="app_name">Modul1</string>
    <string name="_0_tahun">0 Tahun</string>
    <string name="pendaftaran_klub_anime">Pendaftaran Klub Anime</string>
    <string name="nama">Nama</string>
    <string name="umur">Umur:</string>
    <string name="jenis_kelamin">Jenis Kelamin:</string>
    <string name="nomor_telepon">Nomor Telepon:</string>
    <string name="email">Email:</string>
    <string name="hobi">Hobi:</string>
    <string name="alasan">Alasan:</string>
    <string name="usia">Usia</string>
</resources>