<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/tpform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="20dp"
        android:paddingBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_form">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp">

        <TextView
            android:id="@+id/tpnama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nama: "
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tpusia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tpnama"
            android:layout_marginTop="12dp"
            android:text="@string/umur"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tpgender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tpusia"
            android:layout_marginTop="12dp"
            android:text="@string/jenis_kelamin"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tptelepon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tpgender"
            android:layout_marginTop="12dp"
            android:text="@string/nomor_telepon"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tpemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tptelepon"
            android:layout_marginTop="12dp"
            android:text="@string/email"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tphobi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tpemail"
            android:layout_marginTop="12dp"
            android:text="@string/hobi"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tpalasan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tphobi"
            android:layout_marginTop="12dp"
            android:text="@string/alasan"
            android:textSize="18sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp">
        <TextView
            android:id="@+id/nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nama"
            android:textSize="18sp"
            android:layout_toRightOf="@+id/tpnama"/>
        <TextView
            android:id="@+id/usia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usia"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@+id/tpusia"
            android:layout_below="@+id/nama"/>
        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jenis Kelamin"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@+id/tpgender"
            android:layout_below="@+id/usia"/>
        <TextView
            android:id="@+id/telepon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No Telepon"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@+id/tptelepon"
            android:layout_below="@+id/gender"/>
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@+id/tpemail"
            android:layout_below="@+id/telepon"/>
        <TextView
            android:id="@+id/hobi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hobi"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@+id/tphobi"
            android:layout_below="@+id/email"/>
        <TextView
            android:id="@+id/alasan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Alasan"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@+id/tpalasan"
            android:layout_below="@+id/hobi"/>
    </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>